--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -49,5 +49,5 @@
         }
     },
     "containerUser": "jon",
-    "onCreateCommand": "cp -r /workspaces/dotfiles /home/jon/.dotfiles && mv /home/jon/.dotfiles/omz /home/jon/.oh-my-zsh"
+    "onCreateCommand": "cp -r /workspaces/dotfiles ~/.dotfiles && mv ~/.dotfiles/.oh-my-zsh ~/.oh-my-zsh"
 }
